--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
 @import 'tailwindcss';
 @import 'tw-animate-css';
+
 
 @custom-variant dark (&:is(.dark *));
 body {
@@ -120,5 +122,19 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+  
   }
+}
+
+.rajdhanifont {
+  font-family: 'Rajdhani', sans-serif;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;  /* Chrome, Safari and Opera */
 }
