Landing page Merge (#13)
* nav and foot 1.0

* hero section done

* add:animations

* improve ui

* improve ui 2

* Updated navbar logo to external URL

* Merged navbar updates from users/Aishik/navbar

* About Section Creation (#10)

* setting the playground page

* about section

---------

Co-authored-by: Pearl queen ray <pearlqueenray2006@gmail.com>
Co-authored-by: Anirban Majumder <81350357+Anirban-Majumder@users.noreply.github.com>

---------

Co-authored-by: Aishik Mondal <mondalaishik2021@gmail.com>
Co-authored-by: Ankur Bag <ankurbag700@gmail.com>
Co-authored-by: Soumyaraj Bag <soumyarajbag@gmail.com>
Co-authored-by: Soumyaraj Bag <115944476+soumyarajbag@users.noreply.github.com>
Co-authored-by: omsohom01 <omsohom01@gmail.com>
Co-authored-by: Pearl queen ray <pearlqueenray2006@gmail.com>

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,22 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
+@font-face {
+  font-family: 'Rajdhani';
+  src: url('/fonts/Rajdhani-Variable.ttf') format('truetype');
+  font-weight: 100 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Agency';
+  src: url('/fonts/AGENCYB.ttF') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
 
 @custom-variant dark (&:is(.dark *));
+
 body {
   background-color: black;
   color: white;
@@ -120,9 +134,9 @@ body {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
-  
   }
 }
 
@@ -131,10 +145,10 @@ body {
 }
 
 .no-scrollbar {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .no-scrollbar::-webkit-scrollbar {
-  display: none;  /* Chrome, Safari and Opera */
+  display: none; /* Chrome, Safari and Opera */
 }
