--- a/public/mails/send-email.ejs
+++ b/public/mails/send-email.ejs
@@ -359,7 +359,7 @@
                                             style="max-width: 280px; margin: 0 auto 25px auto;">
                                             <tr>
                                                 <td align="center" width="33.33%" style="padding: 0 10px;">
-                                                    <a href="https://www.instagram.com/regalia_rcciit/" target="_blank"
+                                                    <a href="https://www.instagram.com/got.rcciit/" target="_blank"
                                                         style="text-decoration: none;">
                                                         <img src="https://i.postimg.cc/DwLzVwLQ/insta.png"
                                                             alt="Instagram" width="55" height="55"
@@ -367,7 +367,7 @@
                                                     </a>
                                                 </td>
                                                 <td align="center" width="33.33%" style="padding: 0 10px;">
-                                                    <a href="https://www.regalia.rcciit.org.in/" target="_blank"
+                                                    <a href="https://www.got.rcciit.org.in/" target="_blank"
                                                         style="text-decoration: none;">
                                                         <img src="https://png.pngtree.com/png-vector/20190321/ourmid/pngtree-vector-globe-icon-png-image_855070.jpg"
                                                             alt="Website" width="55" height="55"
