--- a/public/mails/verify-email.ejs
+++ b/public/mails/verify-email.ejs
@@ -378,7 +378,7 @@
                                             style="max-width: 280px; margin: 0 auto 25px auto;">
                                             <tr>
                                                 <td align="center" width="33.33%" style="padding: 0 10px;">
-                                                    <a href="https://www.instagram.com/regalia_rcciit/" target="_blank"
+                                                    <a href="https://www.instagram.com/got.rcciit/" target="_blank"
                                                         style="text-decoration: none;">
                                                         <img src="https://i.postimg.cc/DwLzVwLQ/insta.png"
                                                             alt="Instagram" width="55" height="55"
@@ -386,7 +386,7 @@
                                                     </a>
                                                 </td>
                                                 <td align="center" width="33.33%" style="padding: 0 10px;">
-                                                    <a href="https://www.regalia.rcciit.in/" target="_blank"
+                                                    <a href="https://www.got.rcciit.in/" target="_blank"
                                                         style="text-decoration: none;">
                                                         <img src="https://i.postimg.cc/qMBMQj9q/image.png" alt="Website"
                                                             width="55" height="55"
